# src/docs/swagger.json
@@ -168,7 +168,7 @@
                         "AuthBearer": []
                     }
                 ],
-                "description": "Create a GST entry into the system",
+                "description": "Create GST entries into the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -178,7 +178,7 @@
                 "tags": [
                     "GSTs"
                 ],
-                "summary": "Creates GST",
+                "summary": "Creates GSTs",
                 "parameters": [
                     {
                         "enum": [
@@ -193,12 +193,12 @@
                         "required": true
                     },
                     {
-                        "description": "CreateGSTRequest",
+                        "description": "CreateGstsRequest",
                         "name": "Request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.CreateGSTRequest"
+                            "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.CreateGstsRequest"
                         }
                     }
                 ],
@@ -334,7 +334,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.UpdateGSTReturnStatusRequest"
+                            "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.UpdateGstReturnStatusRequest"
                         }
                     }
                 ],
@@ -378,6 +378,58 @@
                         "type": "integer",
                         "description": "Version",
                         "name": "version",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_helper.BaseHttpResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_helper.BaseHttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v{version}/mocks/{filename}/{prop}": {
+            "get": {
+                "description": "Mock data endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mock"
+                ],
+                "summary": "Mock data",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Version",
+                        "name": "version",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "File name",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Property name",
+                        "name": "prop",
                         "in": "path",
                         "required": true
                     }
@@ -670,38 +722,17 @@
                 "GSTR9"
             ]
         },
-        "github_com_jaganathanb_dapps-api_api_dto.CreateGSTRequest": {
+        "github_com_jaganathanb_dapps-api_api_dto.CreateGstsRequest": {
             "type": "object",
             "required": [
-                "gstin"
+                "gstins"
             ],
             "properties": {
-                "address": {
-                    "type": "string",
-                    "maxLength": 128
-                },
-                "gstStatuses": {
+                "gstins": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.GSTStatus"
+                        "type": "string"
                     }
-                },
-                "gstin": {
-                    "type": "string",
-                    "maxLength": 15
-                },
-                "locked": {
-                    "type": "boolean"
-                },
-                "mobileNumber": {
-                    "type": "string",
-                    "maxLength": 10
-                },
-                "registrationDate": {
-                    "type": "string"
-                },
-                "tradeName": {
-                    "type": "string"
                 }
             }
         },
@@ -724,29 +755,6 @@
                 }
             }
         },
-        "github_com_jaganathanb_dapps-api_api_dto.GSTStatus": {
-            "type": "object",
-            "properties": {
-                "filedDate": {
-                    "type": "string"
-                },
-                "gstRType": {
-                    "$ref": "#/definitions/constants.GstReturnType"
-                },
-                "notes": {
-                    "type": "string"
-                },
-                "pendingReturns": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "taxPeriod": {
-                    "type": "string"
-                }
-            }
-        },
         "github_com_jaganathanb_dapps-api_api_dto.GetGstResponse": {
             "type": "object",
             "required": [
@@ -760,7 +768,7 @@
                 "gstStatuses": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.GSTStatus"
+                        "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.GstStatus"
                     }
                 },
                 "gstin": {
@@ -792,6 +800,29 @@
                     "type": "string",
                     "maxLength": 11,
                     "minLength": 11
+                }
+            }
+        },
+        "github_com_jaganathanb_dapps-api_api_dto.GstStatus": {
+            "type": "object",
+            "properties": {
+                "filedDate": {
+                    "type": "string"
+                },
+                "gstRType": {
+                    "$ref": "#/definitions/constants.GstReturnType"
+                },
+                "notes": {
+                    "type": "string"
+                },
+                "pendingReturns": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "taxPeriod": {
+                    "type": "string"
                 }
             }
         },
@@ -922,7 +953,7 @@
                 }
             }
         },
-        "github_com_jaganathanb_dapps-api_api_dto.UpdateGSTReturnStatusRequest": {
+        "github_com_jaganathanb_dapps-api_api_dto.UpdateGstReturnStatusRequest": {
             "type": "object",
             "required": [
                 "gstin"
@@ -931,7 +962,7 @@
                 "gstStatuses": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.GSTStatus"
+                        "$ref": "#/definitions/github_com_jaganathanb_dapps-api_api_dto.GstStatus"
                     }
                 },
                 "gstin": {
